src/js/parser2.js
window.PEG= // @generated by Peggy 4.0.2.
//
// https://peggyjs.org/
(function() {
  "use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { s: peg$parses };
  var peg$startRuleFunction = peg$parses;

  var peg$c0 = ".global";
  var peg$c1 = ".section";
  var peg$c2 = ".data";
  var peg$c3 = ".text";
  var peg$c4 = ".bss";
  var peg$c5 = ".";
  var peg$c6 = ":";
  var peg$c7 = ",";
  var peg$c8 = "[";
  var peg$c9 = "]";
  var peg$c10 = "=";
  var peg$c11 = "x";
  var peg$c12 = "W";
  var peg$c13 = "#";
  var peg$c14 = "SP";
  var peg$c15 = "0b";
  var peg$c16 = "'";
  var peg$c17 = "\"";
  var peg$c18 = "//";
  var peg$c19 = "LDR";
  var peg$c20 = "LDRB";
  var peg$c21 = "LDP";
  var peg$c22 = "STRB";
  var peg$c23 = "STR";
  var peg$c24 = "STP";
  var peg$c25 = "ADD";
  var peg$c26 = "SUB";
  var peg$c27 = "MUL";
  var peg$c28 = "UDIV";
  var peg$c29 = "SDIV";
  var peg$c30 = "AND";
  var peg$c31 = "ORR";
  var peg$c32 = "EOR";
  var peg$c33 = "MVN";
  var peg$c34 = "LSL";
  var peg$c35 = "LSR";
  var peg$c36 = "ASR";
  var peg$c37 = "ROR";
  var peg$c38 = "BEQ";
  var peg$c39 = "BNE";
  var peg$c40 = "BGT";
  var peg$c41 = "BLT";
  var peg$c42 = "B";
  var peg$c43 = "BL";
  var peg$c44 = "RET";
  var peg$c45 = "CMP";
  var peg$c46 = "B.EQ";
  var peg$c47 = "B.GT";
  var peg$c48 = "B.LT";
  var peg$c49 = "MOV";
  var peg$c50 = "LOOP";
  var peg$c51 = "SVC";
  var peg$c52 = "MSR";

  var peg$r0 = /^[a-zA-Z_]/;
  var peg$r1 = /^[a-zA-Z0-9_]/;
  var peg$r2 = /^[0-3]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[01]/;
  var peg$r5 = /^[A-Za-z]/;
  var peg$r6 = /^[^"]/;
  var peg$r7 = /^[\r\n]/;
  var peg$r8 = /^[ \t\n\r]/;

  var peg$e0 = peg$literalExpectation(".global", false);
  var peg$e1 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false);
  var peg$e2 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false);
  var peg$e3 = peg$literalExpectation(".section", false);
  var peg$e4 = peg$literalExpectation(".data", false);
  var peg$e5 = peg$literalExpectation(".text", false);
  var peg$e6 = peg$literalExpectation(".bss", false);
  var peg$e7 = peg$literalExpectation(".", false);
  var peg$e8 = peg$literalExpectation(":", false);
  var peg$e9 = peg$literalExpectation(",", false);
  var peg$e10 = peg$literalExpectation("[", false);
  var peg$e11 = peg$literalExpectation("]", false);
  var peg$e12 = peg$literalExpectation("=", false);
  var peg$e13 = peg$literalExpectation("x", false);
  var peg$e14 = peg$classExpectation([["0", "3"]], false, false);
  var peg$e15 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e16 = peg$literalExpectation("W", false);
  var peg$e17 = peg$literalExpectation("#", false);
  var peg$e18 = peg$literalExpectation("SP", false);
  var peg$e19 = peg$literalExpectation("0b", false);
  var peg$e20 = peg$classExpectation(["0", "1"], false, false);
  var peg$e21 = peg$literalExpectation("'", false);
  var peg$e22 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false);
  var peg$e23 = peg$literalExpectation("\"", false);
  var peg$e24 = peg$classExpectation(["\""], true, false);
  var peg$e25 = peg$literalExpectation("//", false);
  var peg$e26 = peg$classExpectation(["\r", "\n"], false, false);
  var peg$e27 = peg$anyExpectation();
  var peg$e28 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e29 = peg$literalExpectation("LDR", false);
  var peg$e30 = peg$literalExpectation("LDRB", false);
  var peg$e31 = peg$literalExpectation("LDP", false);
  var peg$e32 = peg$literalExpectation("STRB", false);
  var peg$e33 = peg$literalExpectation("STR", false);
  var peg$e34 = peg$literalExpectation("STP", false);
  var peg$e35 = peg$literalExpectation("ADD", false);
  var peg$e36 = peg$literalExpectation("SUB", false);
  var peg$e37 = peg$literalExpectation("MUL", false);
  var peg$e38 = peg$literalExpectation("UDIV", false);
  var peg$e39 = peg$literalExpectation("SDIV", false);
  var peg$e40 = peg$literalExpectation("AND", false);
  var peg$e41 = peg$literalExpectation("ORR", false);
  var peg$e42 = peg$literalExpectation("EOR", false);
  var peg$e43 = peg$literalExpectation("MVN", false);
  var peg$e44 = peg$literalExpectation("LSL", false);
  var peg$e45 = peg$literalExpectation("LSR", false);
  var peg$e46 = peg$literalExpectation("ASR", false);
  var peg$e47 = peg$literalExpectation("ROR", false);
  var peg$e48 = peg$literalExpectation("BEQ", false);
  var peg$e49 = peg$literalExpectation("BNE", false);
  var peg$e50 = peg$literalExpectation("BGT", false);
  var peg$e51 = peg$literalExpectation("BLT", false);
  var peg$e52 = peg$literalExpectation("B", false);
  var peg$e53 = peg$literalExpectation("BL", false);
  var peg$e54 = peg$literalExpectation("RET", false);
  var peg$e55 = peg$literalExpectation("CMP", false);
  var peg$e56 = peg$literalExpectation("B.EQ", false);
  var peg$e57 = peg$literalExpectation("B.GT", false);
  var peg$e58 = peg$literalExpectation("B.LT", false);
  var peg$e59 = peg$literalExpectation("MOV", false);
  var peg$e60 = peg$literalExpectation("LOOP", false);
  var peg$e61 = peg$literalExpectation("SVC", false);
  var peg$e62 = peg$literalExpectation("MSR", false);

  var peg$f0 = function(root) { return generateCST(root);};
  var peg$f1 = function(ins) { return new Node("instruccion", ins); };
  var peg$f2 = function(etiq) { return new Node("etiqueta", etiq); };
  var peg$f3 = function(glo) { return new Node("etiqueta", glo); };
  var peg$f4 = function(ed) { return new Node("id", id); };
  var peg$f5 = function(glo) { return new Node("PR", glo); };
  var peg$f6 = function(glo1) { return new Node("PR", glo1); };
  var peg$f7 = function(glo2) { return new Node("PR", glo2); };
  var peg$f8 = function(glo3) { return new Node("PR", glo3); };
  var peg$f9 = function(glo4) { return new Node("PR", glo4); };
  var peg$f10 = function(id) { return new Node("GLOBAL", "."+id); };
  var peg$f11 = function(ide) { return new Node("etiqueta", ide); };
  var peg$f12 = function(ne, li) { return new Node("instruccion", ne, li); };
  var peg$f13 = function(op1, op2) { return new Node("listaOp", op1, op2); };
  var peg$f14 = function(regen) { return new Node("operando", regen); };
  var peg$f15 = function(imd) { return new Node("operando", imd); };
  var peg$f16 = function(ident) { return new Node("identifcador", ident); };
  var peg$f17 = function(op) { return new Node("operando", op); };
  var peg$f18 = function(id) { return new Node("operando", "="+id); };
  var peg$f19 = function(val) { return new Node("operando", val); };
  var peg$f20 = function(id) { return new Node("id", id); };
  var peg$f21 = function(regigen) { return new Node("registroGen", 'x'+regigen); };
  var peg$f22 = function(regiflo) { return new Node("registroRed", 'w'+regiflo); };
  var peg$f23 = function(inmval) { return new Node("immediateValue", '#',inmval); };
  var peg$f24 = function() { return new Node ("registroPila","SP");};
  var peg$f25 = function(decim) { return new Node("decimal", decim); };
  var peg$f26 = function(binar) { return new Node("binario",'0b'+ binar ); };
  var peg$f27 = function(ente) { return new Node("entero", ente); };
  var peg$f28 = function() {};
  var peg$f29 = function(et1) { return new Node("nemonico", et1); };
  var peg$f30 = function(et2) { return new Node("nemonico", et2); };
  var peg$f31 = function(et3) { return new Node("nemonico", et3); };
  var peg$f32 = function(et4) { return new Node("nemonico", et4); };
  var peg$f33 = function(et5) { return new Node("nemonico", et5); };
  var peg$f34 = function(et6) { return new Node("nemonico", et6); };
  var peg$f35 = function(et7) { return new Node("nemonico", et7); };
  var peg$f36 = function(et8) { return new Node("nemonico", et8); };
  var peg$f37 = function(ins1) { return new Node("instLoad", ins1); };
  var peg$f38 = function(ins2) { return new Node("instLoad", ins2); };
  var peg$f39 = function(ins3) { return new Node("instLoad", ins3); };
  var peg$f40 = function(inst2) { return new Node("instStore", inst2); };
  var peg$f41 = function(inst1) { return new Node("instStore", inst1); };
  var peg$f42 = function(inst3) { return new Node("instStore", inst3); };
  var peg$f43 = function(arit1) { return new Node("instArit", arit1); };
  var peg$f44 = function(arit2) { return new Node("instArit", arit2); };
  var peg$f45 = function(arit3) { return new Node("instArit", arit3); };
  var peg$f46 = function(arit4) { return new Node("instArit", arit4); };
  var peg$f47 = function(arit5) { return new Node("instArit", arit5); };
  var peg$f48 = function(log1) { return new Node("instLog", log1); };
  var peg$f49 = function(log1) { return new Node("instLog", log2); };
  var peg$f50 = function(log1) { return new Node("instLog", log3); };
  var peg$f51 = function(log1) { return new Node("instLog", log4); };
  var peg$f52 = function(des1) { return new Node("instDes", des1); };
  var peg$f53 = function(des2) { return new Node("instDes", des2); };
  var peg$f54 = function(des3) { return new Node("instDes", des3); };
  var peg$f55 = function(des4) { return new Node("instDes", des4); };
  var peg$f56 = function(sal1) { return new Node("instSalto", sal1); };
  var peg$f57 = function(sal2) { return new Node("instSalto", sal2); };
  var peg$f58 = function(sal3) { return new Node("instSalto", sal3); };
  var peg$f59 = function(sal4) { return new Node("instSalto", sal4); };
  var peg$f60 = function(sal5) { return new Node("instSalto", sal5); };
  var peg$f61 = function(sal6) { return new Node("instSalto", sal6); };
  var peg$f62 = function(sal7) { return new Node("instSalto", sal7); };
  var peg$f63 = function(esp1) { return new Node("etiquetaEsp",esp1); };
  var peg$f64 = function(esp2) { return new Node("etiquetaEsp",esp2 ); };
  var peg$f65 = function(esp3) { return new Node("etiquetaEsp", esp3); };
  var peg$f66 = function(esp4) { return new Node("etiquetaEsp", esp4); };
  var peg$f67 = function(esp5) { return new Node("etiquetaEsp", esp5); };
  var peg$f68 = function(esp6) { return new Node("etiquetaEsp", esp6); };
  var peg$f69 = function(esp7) { return new Node("etiquetaEsp",esp7 ); };
  var peg$f70 = function(ms) { return new Node("etiquetaPila", ms); };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parses() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseglobal();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseglobal();
    }
    s2 = peg$parse_();
    s3 = [];
    s4 = peg$parselinea();
    while (s4 !== peg$FAILED) {
      s3.push(s4);
      s4 = peg$parselinea();
    }
    s4 = peg$parse_();
    peg$savedPos = s0;
    s0 = peg$f0(s3);

    return s0;
  }

  function peg$parselinea() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseinstruccion();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f1(s1);
    }
    s0 = s1;
    if (s0 === peg$FAILED) {
      s0 = peg$parsecomentario();
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseetiqueta();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$f2(s1);
        }
        s0 = s1;
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parseglobal();
          if (s1 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$f3(s1);
          }
          s0 = s1;
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parseid();
            if (s1 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$f4(s1);
            }
            s0 = s1;
          }
        }
      }
    }

    return s0;
  }

  function peg$parseglobal() {
    var s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 7) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 7;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = input.charAt(peg$currPos);
      if (peg$r0.test(s3)) {
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 !== peg$FAILED) {
        s4 = [];
        s5 = input.charAt(peg$currPos);
        if (peg$r1.test(s5)) {
          peg$currPos++;
        } else {
          s5 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        while (s5 !== peg$FAILED) {
          s4.push(s5);
          s5 = input.charAt(peg$currPos);
          if (peg$r1.test(s5)) {
            peg$currPos++;
          } else {
            s5 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e2); }
          }
        }
        s5 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f5(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.substr(peg$currPos, 8) === peg$c1) {
        s1 = peg$c1;
        peg$currPos += 8;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f6(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        if (input.substr(peg$currPos, 5) === peg$c2) {
          s1 = peg$c2;
          peg$currPos += 5;
        } else {
          s1 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e4); }
        }
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          peg$savedPos = s0;
          s0 = peg$f7(s1);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          if (input.substr(peg$currPos, 5) === peg$c3) {
            s1 = peg$c3;
            peg$currPos += 5;
          } else {
            s1 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e5); }
          }
          if (s1 !== peg$FAILED) {
            s2 = peg$parse_();
            peg$savedPos = s0;
            s0 = peg$f8(s1);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            if (input.substr(peg$currPos, 4) === peg$c4) {
              s1 = peg$c4;
              peg$currPos += 4;
            } else {
              s1 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e6); }
            }
            if (s1 !== peg$FAILED) {
              s2 = peg$parse_();
              peg$savedPos = s0;
              s0 = peg$f9(s1);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
            if (s0 === peg$FAILED) {
              s0 = peg$currPos;
              if (input.charCodeAt(peg$currPos) === 46) {
                s1 = peg$c5;
                peg$currPos++;
              } else {
                s1 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$e7); }
              }
              if (s1 !== peg$FAILED) {
                s2 = input.charAt(peg$currPos);
                if (peg$r0.test(s2)) {
                  peg$currPos++;
                } else {
                  s2 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$e1); }
                }
                if (s2 !== peg$FAILED) {
                  s3 = [];
                  s4 = input.charAt(peg$currPos);
                  if (peg$r1.test(s4)) {
                    peg$currPos++;
                  } else {
                    s4 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$e2); }
                  }
                  while (s4 !== peg$FAILED) {
                    s3.push(s4);
                    s4 = input.charAt(peg$currPos);
                    if (peg$r1.test(s4)) {
                      peg$currPos++;
                    } else {
                      s4 = peg$FAILED;
                      if (peg$silentFails === 0) { peg$fail(peg$e2); }
                    }
                  }
                  s4 = peg$parse_();
                  s5 = peg$parsevalor();
                  if (s5 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s0 = peg$f10(s2);
                  } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                  }
                } else {
                  peg$currPos = s0;
                  s0 = peg$FAILED;
                }
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseetiqueta() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseid();
    if (s1 !== peg$FAILED) {
      if (input.charCodeAt(peg$currPos) === 58) {
        s2 = peg$c6;
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e8); }
      }
      if (s2 !== peg$FAILED) {
        s3 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f11(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseinstruccion() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = peg$parsenemonico();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parselistaOp();
      if (s3 === peg$FAILED) {
        s3 = null;
      }
      s4 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f12(s1, s3);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parselistaOp() {
    var s0, s1, s2, s3, s4, s5, s6;
